# mini-tournament-system

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 40f10cede49f_start_time.py  aa2f8e58d641_fix_primary_key_types.py  b2302cb03da0_initial_migration.py  b6af9967cefc_fix_primary_key_types.py
app/: config.py  db.py  logger.py  main.py
app/api/: __init__.py  tournament.py
app/dependencies/: database.py
app/models/: __init__.py  base.py  tournament.py
app/schemas/: base.py  tournament.py
app/services/: tournament.py
tests/: conftest.py  test_tournament.py
